if(CLR_CMAKE_TARGET_WIN32 AND FEATURE_EVENT_TRACE)
    add_subdirectory(clretwrc)
endif(CLR_CMAKE_TARGET_WIN32 AND FEATURE_EVENT_TRACE)
if (NOT (CLR_CMAKE_TARGET_WIN32 AND FEATURE_CROSSBITNESS))
    if (NOT CLR_CMAKE_TARGET_ARCH_WASM)
        add_subdirectory(mscordbi)
        add_subdirectory(mscordac)
    endif()
    add_subdirectory(mscoree)
endif()
if (NOT CLR_CMAKE_TARGET_ARCH_WASM)
    add_subdirectory(mscorpe)
endif()
add_subdirectory(mscorrc)
